# unsplash-wallpaper

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: dirs.rs  download.rs  main.rs  token.rs
src/unsplash/: client.rs  mod.rs  params.rs
