[package]
name = "unsplash-wallpaper"
version = "1.0.0"
edition = "2024"
description = "A tiny tool to download multiple images from Unsplash API in parallel"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
